<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:fontFamily="@string/font_roboto"
        android:text="@string/add_article_header"/>

    <TextView
        android:id="@+id/add_article_redactor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:textSize="16sp"
        android:clickable="true"
        android:text="@string/add_article_p1"/>

    <TextView
        android:id="@+id/add_article_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:textSize="16sp"
        android:text="@string/add_article_p2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:textSize="16sp"
        android:text="@string/add_article_p3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/add_article_p4"/>

</LinearLayout>